--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typeface-varela-round": "0.0.71"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
