--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "styled-components": "^5.0.0-beta.5",
     "typeface-varela-round": "0.0.71"
   },
   "devDependencies": {
