--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,49 +4,56 @@
             "project": {
                 "title": "Lisa's Button",
                 "imageName": "lisasButtonImage",
-                "description": "WPF project - Human Computer Interactions II (CPSC 581)"
+                "description": "A WPF program of a button that represents another student in my class where they recognize themselves when using it",
+                "link": "/blog/lisas-button"
             }
         },
         {
             "project": {
-                "title": "Quick Comms Cap",
+                "title": "Quick Communications Cap",
                 "imageName": "quickCommsImage",
-                "description": "RPi project - Human Computer Interactions II (CPSC 581)"
+                "description": "An interactive wearable accessory that protects wearers by capturing images of predators and sending loved ones their location",
+                "link": "/blog/quick-comms-cap"
             }
         },
         {
             "project": {
-                "title": "Ikea Builder",
+                "title": "The IKEA Builder",
                 "imageName": "ikeaBuilderImage",
-                "description": "Google Cardboard project - Human Computer Interactions II (CPSC 581)"
+                "description": "A Google Cardboard interface that lets those simulate building select IKEA furniture before buying it to prevent nervousness in the future",
+                "link": "/blog/ikea-builder"
             }
         },
         {
             "project": {
                 "title": "Planting Hygge",
                 "imageName": "plantingHyggeImage",
-                "description": "Unity & Kinect project done for Human Computer Interactions II (CPSC 581)"
+                "description": "A Kinect interface that is a thought-provoking experience which helps the user to think about their friends and family while planting",
+                "link": "/blog/planting-hygge"
             }
         },
         {
             "project": {
                 "title": "Temperature Anomalies",
                 "imageName": "temperatureAnomaliesImage",
-                "description": "D3.js temperature project done for Intro to Data Visualization (CPSC 583)"
+                "description": "A D3.js bubble scatter chart that visualizes different temperature anomalies for different regions of the world from 1987-2016",
+                "link": "/blog/temperature-anomalies"
             }
         },
         {
             "project": {
                 "title": "My Spotify Data",
                 "imageName": "mySpotifyDataImage",
-                "description": "D3.js spotify data project done for Intro to Data Visualization (CPSC 583)"
+                "description": "A D3.js tree chart that visualizes my listening history and sorts it into songs, artists and genres",
+                "link": "/blog/my-spotify-data"
             }
         },
         {
             "project": {
-                "title": "Smartphone Market Shares 2010-2017",
+                "title": "Smartphone Market Shares",
                 "imageName": "smartphoneMarketSharesImage",
-                "description": "D3.js market share data project done for Intro to Data Visualization (CPSC 583)"
+                "description": "A D3.js pie chart that visualizes the global market share of shipments by smartphone vendors",
+                "link": "/blog/smartphone-market-shares"
             }
         }
     ]
