--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,8 @@
                 "title": "Lisa's Button",
                 "imageName": "lisasButtonImage",
                 "description": "A WPF program of a button that represents another student in my class where they recognize themselves when using it",
-                "link": "/blog/lisas-button"
+                "tags": ["C#", "XAML"],
+                "link": "/projects/lisas-button"
             }
         },
         {
@@ -13,7 +14,8 @@
                 "title": "Quick Communications Cap",
                 "imageName": "quickCommsImage",
                 "description": "An interactive wearable accessory that protects wearers by capturing images of predators and sending loved ones their location",
-                "link": "/blog/quick-comms-cap"
+                "tags": ["Python"],
+                "link": "/projects/quick-comms-cap"
             }
         },
         {
@@ -21,7 +23,8 @@
                 "title": "The IKEA Builder",
                 "imageName": "ikeaBuilderImage",
                 "description": "A Google Cardboard interface that lets those simulate building select IKEA furniture before buying it to prevent nervousness in the future",
-                "link": "/blog/ikea-builder"
+                "tags": ["C#", "Unity", "Blender"],
+                "link": "/projects/ikea-builder"
             }
         },
         {
@@ -29,7 +32,8 @@
                 "title": "Planting Hygge",
                 "imageName": "plantingHyggeImage",
                 "description": "A Kinect interface that is a thought-provoking experience which helps the user to think about their friends and family while planting",
-                "link": "/blog/planting-hygge"
+                "tags": ["C#", "Unity", "Blender"],
+                "link": "/projects/planting-hygge"
             }
         },
         {
@@ -37,7 +41,8 @@
                 "title": "Temperature Anomalies",
                 "imageName": "temperatureAnomaliesImage",
                 "description": "A D3.js bubble scatter chart that visualizes different temperature anomalies for different regions of the world from 1987-2016",
-                "link": "/blog/temperature-anomalies"
+                "tags": ["HTML", "CSS", "JavaScript", "D3.js"],
+                "link": "/projects/temperature-anomalies"
             }
         },
         {
@@ -45,7 +50,8 @@
                 "title": "My Spotify Data",
                 "imageName": "mySpotifyDataImage",
                 "description": "A D3.js tree chart that visualizes my listening history and sorts it into songs, artists and genres",
-                "link": "/blog/my-spotify-data"
+                "tags": ["HTML", "CSS", "JavaScript", "D3.js"],
+                "link": "/projects/my-spotify-data"
             }
         },
         {
@@ -53,7 +59,8 @@
                 "title": "Smartphone Market Shares",
                 "imageName": "smartphoneMarketSharesImage",
                 "description": "A D3.js pie chart that visualizes the global market share of shipments by smartphone vendors",
-                "link": "/blog/smartphone-market-shares"
+                "tags": ["HTML", "CSS", "JavaScript", "D3.js"],
+                "link": "/projects/smartphone-market-shares"
             }
         }
     ]
