--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.64",
-    "gatsby-image": "^2.1.4",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.5",
+    "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-remark": "^2.6.14",
-    "gatsby-transformer-sharp": "^2.1.21",
+    "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -23,6 +23,7 @@
     "reactstrap": "^8.0.1",
     "styled-components": "^5.0.0-beta.5",
     "typeface-montserrat": "0.0.54",
+    "typeface-nunito-sans": "0.0.72",
     "typeface-varela-round": "0.0.71"
   },
   "devDependencies": {
