--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reactstrap": "^8.0.1",
     "styled-components": "^5.0.0-beta.5",
     "typeface-montserrat": "0.0.54",
+    "typeface-nunito": "0.0.72",
     "typeface-nunito-sans": "0.0.72",
     "typeface-varela-round": "0.0.71"
   },
