--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "reactstrap": "^8.0.1",
     "styled-components": "^5.0.0-beta.5",
     "typeface-montserrat": "0.0.54",
