--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "reactstrap": "^8.0.1",
