--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-pdf": "^4.1.0",
     "react-reveal": "^1.2.2",
     "reactstrap": "^8.0.1",
     "styled-components": "^5.0.0-beta.5",
