--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.64",
     "gatsby-image": "^2.2.8",
@@ -12,6 +13,7 @@
     "gatsby-plugin-offline": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.2.12",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-remark-images": "^3.1.12",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-json": "^2.2.2",
@@ -26,7 +28,7 @@
     "react-pdf": "^4.1.0",
     "react-reveal": "^1.2.2",
     "reactstrap": "^8.0.1",
-    "styled-components": "^5.0.0-beta.5",
+    "styled-components": "^5.0.0-beta.6-ej4",
     "typeface-montserrat": "0.0.54",
     "typeface-nunito": "0.0.72",
     "typeface-nunito-sans": "0.0.72",
