--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.64",
@@ -26,6 +27,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-pdf": "^4.1.0",
+    "react-responsive": "^7.0.0",
     "react-reveal": "^1.2.2",
     "reactstrap": "^8.0.1",
     "styled-components": "^5.0.0-beta.6-ej4",
@@ -35,6 +37,7 @@
     "typeface-varela-round": "0.0.71"
   },
   "devDependencies": {
+    "babel-preset-gatsby": "^0.2.8",
     "prettier": "^1.18.2"
   },
   "keywords": [
